[package]
name = "fire-http-api"
description = "Make web apis"
version = "0.1.2"
authors = ["Sören Meier <info@s-me.ch>"]
repository = "https://github.com/fire-lib/fire-http-api"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
stream = ["http/ws"]

[dependencies]
serde = "1.0"
http = { package = "fire-http", version = "0.2.10", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1.17", features = ["macros"] }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.17", features = ["macros", "rt-multi-thread"] }

[package.metadata.docs.rs]
all-features = true